Change height to avoid cutting off bottom section

--- a/scss/museums.scss
+++ b/scss/museums.scss
@@ -7,7 +7,7 @@ $navy: #030020;
 
 #museums {
 	overflow: hidden;
-	height: 100vh;
+	height: 108vh;
 	background: $black;
 
 	//** MODAL **//
